Adopt new io.opentelemetry.semconv:opentelemetry-semconv lib